chore: migrate mock and openapi to work with latest
