# src/interface/openapi.yaml
@@ -314,6 +314,52 @@ paths:
             schema:
               $ref: '#/components/schemas/TransactionRequestsPostRequest'
         required: true
+  '/authorizations':
+    post:
+      description: The HTTP request `POST /authorizations` is used to request the Payer to
+        enter the applicable credentials in the PISP system.
+      summary: Perform PISP authorization
+      tags:
+        - authorizations
+        - sampled
+      parameters:
+        - $ref: "#/components/parameters/Accept"
+        - $ref: "#/components/parameters/Content-Length"
+        - $ref: "#/components/parameters/Content-Type"
+        - $ref: "#/components/parameters/Date"
+        - $ref: "#/components/parameters/X-Forwarded-For"
+        - $ref: "#/components/parameters/FSPIOP-Source"
+        - $ref: "#/components/parameters/FSPIOP-Destination"
+        - $ref: "#/components/parameters/FSPIOP-Encryption"
+        - $ref: "#/components/parameters/FSPIOP-Signature"
+        - $ref: "#/components/parameters/FSPIOP-URI"
+        - $ref: "#/components/parameters/FSPIOP-HTTP-Method"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AuthorizationsPostRequest"
+        required: true
+      responses:
+        "202":
+          $ref: "#/components/responses/Response200"
+        "400":
+          $ref: "#/components/responses/ErrorResponse400"
+        "401":
+          $ref: "#/components/responses/ErrorResponse401"
+        "403":
+          $ref: "#/components/responses/ErrorResponse403"
+        "404":
+          $ref: "#/components/responses/ErrorResponse404"
+        "405":
+          $ref: "#/components/responses/ErrorResponse405"
+        "406":
+          $ref: "#/components/responses/ErrorResponse406"
+        "501":
+          $ref: "#/components/responses/ErrorResponse501"
+        "503":
+          $ref: "#/components/responses/ErrorResponse503"
+      operationId: AuthorizationsPost
   '/authorizations/{ID}':
     get:
       tags:
@@ -336,7 +382,7 @@ paths:
           description: 'a valid enumeration for the authentication type: OTP, QRCODE'
           in: query
           required: true
-          schema: 
+          schema:
             $ref: '#/components/schemas/AuthenticationType'
         - name: retriesLeft
           description: >-
@@ -352,7 +398,7 @@ paths:
             account
           in: query
           required: true
-          schema: 
+          schema:
             $ref: '#/components/schemas/Amount'
         - name: currency
           description: >-
@@ -360,7 +406,7 @@ paths:
             the Payer’s account
           in: query
           required: true
-          schema: 
+          schema:
             $ref: '#/components/schemas/Currency'
       responses:
         '200':
@@ -840,13 +886,18 @@ components:
     AuthenticationType:
       title: AuthenticationTypeEnum
       description: >-
-        Below are the allowed values for the enumeration AuthenticationType. -
-        OTP One-time password generated by the Payer FSP. - QRCODE QR code used
-        as One Time Password.
+        Below are the allowed values for the enumeration AuthenticationType.
+
+        - OTP One-time password generated by the Payer FSP.
+
+        - QRCODE QR code used as One Time Password.
+
+        - U2F challenge-response, where payer FSP verifies if the response provided by end-user device matches the previously registered key.
+      type: string
       enum:
         - OTP
         - QRCODE
-      type: string
+        - U2F
     AuthenticationValue:
       title: AuthenticationValue
       description: >-
@@ -854,6 +905,49 @@ components:
         authentication type used in the AuthenticationInfo complex type.
       pattern: '^\d{3,10}$|^\S{1,64}$'
       type: string
+    U2FPinValue:
+      title: U2FPinValue
+      type: object
+      description: U2F challenge-response, where payer FSP verifies if the response
+        provided by end-user device matches the previously registered key.
+      properties:
+        pinValue:
+          $ref: "#/components/schemas/U2FPIN"
+        counter:
+          $ref: "#/components/schemas/Integer"
+      required:
+        - pinValue
+        - counter
+    U2FPIN:
+      title: U2FPIN
+      type: string
+      pattern: ^\S{1,64}$
+      minLength: 1
+      maxLength: 64
+    AuthorizationsPostRequest:
+      title: AuthorizationPostRequest
+      type: object
+      description: POST /authorizations Request object
+      properties:
+        authenticationType:
+          $ref: "#/components/schemas/AuthenticationType"
+        retriesLeft:
+          $ref: "#/components/schemas/RetriesLeft"
+        amount:
+          $ref: "#/components/schemas/Money"
+        transactionId:
+          $ref: "#/components/schemas/CorrelationId"
+        transactionRequestId:
+          $ref: "#/components/schemas/CorrelationId"
+        quote:
+          $ref: "#/components/schemas/QuotesIDPutResponse"
+      required:
+        - authenticationType
+        - retriesLeft
+        - amount
+        - transactionId
+        - transactionRequestId
+        - quote
     AuthorizationResponse:
       title: AuthorizationResponse
       description: >-
@@ -866,6 +960,8 @@ components:
         - REJECTED
         - RESEND
       type: string
+    RetriesLeft:
+      $ref: "#/components/schemas/Integer"
     BalanceOfPayments:
       title: BalanceOfPayments
       description: >-
@@ -1367,6 +1463,7 @@ components:
       maxLength: 64
       minLength: 1
       type: string
+      pattern: ^\S{1,64}$
     RefundReason:
       title: RefundReason
       description: Reason for the refund.
@@ -1497,9 +1594,9 @@ components:
       type: object
       properties:
         authentication:
-          type: string
+          $ref: "#/components/schemas/AuthenticationType"
         authenticationValue:
-          type: string
+          $ref: "#/components/schemas/AuthenticationValue"
     AuthorizationsIDPutResponse:
       title: AuthorizationsIDPutResponse
       description: 'PUT /authorizations/{ID} object'
@@ -1690,7 +1787,7 @@ components:
           type: string
     ExtensionList:
       title: ExtensionList
-      description: Data model for the complex type ExtensionList
+      description: Data model for the complex type ExtensionList. An optional list of extensions, specific to deployment.
       required:
         - extension
       type: object
